--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation "org.springframework.boot:spring-boot-starter-webflux"
 
 	// jwt
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	runtimeOnly group: 'io.jsonwebtoken', name:'jjwt-impl', version: '0.11.2'
 	runtimeOnly group: 'io.jsonwebtoken', name:'jjwt-jackson', version: '0.11.2'
 
