feat : 위치 기반 맛집 추천 기능 구현 중

--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ dependencies {
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
 	implementation 'com.google.maps:google-maps-services:2.2.0'
+	implementation 'org.locationtech.jts:jts-core:1.19.0'
 	implementation 'org.slf4j:slf4j-simple:1.7.25'
 
 	compileOnly 'org.projectlombok:lombok'
