--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,6 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-//	implementation "org.springframework.boot:spring-boot-starter-webflux"
 
 	// jwt
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
@@ -45,9 +44,13 @@ dependencies {
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
+	// Googla Maps
 	implementation 'com.google.maps:google-maps-services:2.2.0'
 	implementation 'org.locationtech.jts:jts-core:1.19.0'
 	implementation 'org.slf4j:slf4j-simple:1.7.25'
+
+	// amazon aws s3
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.638'
 
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
