feat : 가게 등록, 수정 시 이미지 등록 기능 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,8 @@
 spring:
     config:
         import: classpath:prod/application-prod.yml
+
+    servlet:
+        multipart:
+            max-file-size: 10MB
+            max-request-size: 10MB
